--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit     
-PyMuPDF==1.26.3
-presidio-analyzer==2.2.359
-presidio-anonymizer==2.2.359
-pdfminer.six==20250506
-spacy>=3.8.0
-en-core-web-sm==3.8.0
+PyMuPDF
+presidio-analyzer
+presidio-anonymizer
+spacy
+en-core-web-sm
