--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit     
-PyMuPDF
-presidio-analyzer
-presidio-anonymizer
-spacy
-en-core-web-sm
+streamlit>=1.24.0
+PyMuPDF==1.26.3
+presidio-analyzer==2.2.359
+presidio-anonymizer==2.2.359
+pdfminer.six==20250506
+spacy>=3.8.0
